--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,4 +4,5 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-"glium" = "0.36.0"
+winit = "0.30" # window creation & events
+thiserror = "2.0.17"
