--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,8 @@ edition = "2024"
 [dependencies]
 winit = "0.30" # window creation & events
 thiserror = "2.0.17"
+env_logger = "0.11.8"
+log = "0.4"
+wgpu = "28.0"
+pollster = "0.4.0"
+anyhow = "1.0.100"
